# llzk-to-shlo

./: .bazelrc  .bazelrc.ci  .codespellrc  .gitattributes  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE.bazel  a.mlir  llzk-status.md
bench/m3/: BUILD.bazel  circom_determinism_tripwire_test.sh  csv_schema.h  json_input.cc  json_input.h  json_input_test.cc  m3_correctness_gate_test.sh  m3_runner_main.cc  run.sh  run_baseline.sh  timer.h  witness_compare.cc  witness_compare.h  witness_compare_test.cc
bench/m3/charts/: render.py
bench/m3/inputs/: aes_256_ctr.json  aes_256_ctr.wtns  aes_256_encrypt.json  aes_256_encrypt.json.gate  aes_256_encrypt.wtns  aes_256_key_expansion.json  aes_256_key_expansion.json.gate  aes_256_key_expansion.wtns  aes_mul.json  aes_mul.json.gate  aes_mul.wtns  binsum.json  binsum.wtns  bitelementmulany.json  bitelementmulany.wtns  decoder.json  decoder.wtns  edwards2montgomery.wtns  emulated_aesenc_substitute_bytes.json  emulated_aesenc_substitute_bytes.wtns  fulladder.json  iden3_auth.json  iden3_auth_test.json  iden3_auth_with_relay.json  iden3_get_claim_expiration.json  iden3_get_claim_expiration.wtns  iden3_get_claim_subject.json  iden3_get_claim_subject.wtns  iden3_get_subject_location.wtns  iden3_get_value_by_index.json  iden3_get_value_by_index.wtns  iden3_id_ownership_sig.json  iden3_id_ownership_sig_relay.json  iden3_intest.json  iden3_intest.json.gate  iden3_intest.wtns  iden3_is_updatable.json  iden3_query_mtp.json  iden3_query_mtp_relay.json  iden3_query_mtp_relay_test.json  (+59 more)
bench/m3/results/: AES-256-encrypt_cpu_circom.csv  AES-256-encrypt_gpu_zkx.csv  MontgomeryDouble_cpu_circom.csv  MontgomeryDouble_gpu_zkx.csv  _methods.txt  keccak_chi_cpu_circom.csv  keccak_chi_gpu_zkx.csv  keccak_iota10_cpu_circom.csv  keccak_iota10_gpu_zkx.csv  keccak_iota3_cpu_circom.csv  keccak_iota3_gpu_zkx.csv  keccak_pad_cpu_circom.csv  keccak_pad_gpu_zkx.csv  keccak_rhopi_cpu_circom.csv  keccak_rhopi_gpu_zkx.csv  keccak_round0_cpu_circom.csv  keccak_round0_gpu_zkx.csv  keccak_round20_cpu_circom.csv  keccak_round20_gpu_zkx.csv  keccak_squeeze_cpu_circom.csv  keccak_squeeze_gpu_zkx.csv  keccak_theta_cpu_circom.csv  keccak_theta_gpu_zkx.csv
examples/: BUILD.bazel  e2e.bzl  iden3_get_claim_expiration_llzk.llzk.golden  iden3_get_claim_subject_llzk.llzk.golden  iden3_get_value_by_index_llzk.llzk.golden  iden3_intest_llzk.llzk.golden  iden3_querytest_llzk.llzk.golden  iden3_verify_credential_subject_llzk.llzk.golden  iden3_verify_expiration_time_llzk.llzk.golden  keccak_chi_llzk.llzk.golden  keccak_iota10_llzk.llzk.golden  keccak_iota3_llzk.llzk.golden  keccak_rhopi_llzk.llzk.golden  keccak_round0_llzk.llzk.golden  keccak_round20_llzk.llzk.golden  keccak_theta_llzk.llzk.golden  maci_quin_generate_path_indices_llzk.llzk.golden  maci_quin_selector_llzk.llzk.golden  maci_splicer_llzk.llzk.golden  run_e2e.sh
examples/multiplier2/: main.circom  main.llzk
examples/simple/: main.circom
llzk_to_shlo/Conversion/LlzkToStablehlo/: ArrayPatterns.cpp  ArrayPatterns.h  BUILD.bazel  FeltPatterns.cpp  FeltPatterns.h  FunctionPatterns.cpp  FunctionPatterns.h  InputPodElimination.cpp  InputPodElimination.h  LlzkToStablehlo.cpp  LlzkToStablehlo.h  LlzkToStablehlo.td  LlzkUpstreamArtifacts.cpp  LlzkUpstreamArtifacts.h  LoweringInfrastructure.cpp  LoweringInfrastructure.h  PodArrayMaterialize.cpp  PodArrayMaterialize.h  PodArrayReads.cpp  PodArrayReads.h  PodArrayWhileCarry.cpp  PodArrayWhileCarry.h  PodDispatchPhases.cpp  PodDispatchPhases.h  PodFinalization.cpp  PodFinalization.h  PodInvariants.cpp  PodInvariants.h  PodModuleCleanup.cpp  PodModuleCleanup.h  PostConversionStructural.cpp  PostConversionStructural.h  PreConversionStructural.cpp  PreConversionStructural.h  RemovalPatterns.cpp  RemovalPatterns.h  SimplifySubComponents.cpp  SimplifySubComponents.h  SimplifySubComponents.td  SimplifySubComponentsInternal.h  (+7 more)
llzk_to_shlo/Conversion/VerifyWitnessLayout/: BUILD.bazel  VerifyWitnessLayout.cpp  VerifyWitnessLayout.h  VerifyWitnessLayout.td
llzk_to_shlo/Conversion/WitnessLayoutAnchor/: BUILD.bazel  WitnessLayoutAnchor.cpp  WitnessLayoutAnchor.h  WitnessLayoutAnchor.td
llzk_to_shlo/Dialect/WLA/: BUILD.bazel  WLA.cpp  WLA.h  WLA.td
tests/: BUILD.bazel  batch_e2e_test.sh  batch_smoke_test.sh  gpu_semantic_test.sh  lit.cfg.py  lit.site.cfg.py.in  run_lit.sh  witness_correctness_test.sh
tests/Conversion/BatchStablehlo/: BUILD.bazel  batch_semantic.mlir  compare_select.mlir  constant.mlir  data_dependent_index.mlir  dynamic_slice.mlir  dynamic_update_slice_mixed_index_scatter.mlir  elementwise.mlir  multi_func.mlir  noop.mlir  reshape.mlir  sigma.mlir  while_iterarg_ds_gather.mlir  while_iterarg_dus_scatter.mlir
tests/Conversion/LlzkToStablehlo/: arith_fanout_scrub.mlir  array_extract.mlir  array_insert.mlir  array_len.mlir  array_new_insert_per_row_2d_const.mlir  array_new_pod_element_at_function_scope.mlir  array_new_with_elements.mlir  array_ops.mlir  array_pod_count_in_dispatch.mlir  array_readwrite_roundtrip.mlir  bool_cmp_predicates.mlir  bool_ops.mlir  cast_toindex.mlir  cross_while_pod_array_comp.mlir  cross_while_pod_array_comp_2d.mlir  cross_while_pod_array_comp_array_typed_out.mlir  cross_while_pod_array_comp_with_struct_drain.mlir  cross_while_pod_array_input_pod_in_field.mlir  dead_pod_carry_inline.mlir  dispatch_in_while.mlir  dispatch_while_body.mlir  erase_dead_pod_region_external_use.mlir  felt_bitwise_ops.mlir  felt_bitwise_semantic.mlir  felt_const_edge.mlir  felt_inv.mlir  felt_inv_semantic.mlir  felt_nondet.mlir  felt_ops.mlir  felt_pow.mlir  felt_umod.mlir  full_conversion.mlir  input_pod_elimination.mlir  integration.mlir  llzk_nondet_dead_empty_pod.mlir  main_struct_exact_match.mlir  materialize_pod_array_comp_mixed_width_index.mlir  multi_scalar_pod_comp_materialize.mlir  multi_write_pod_array_rewrite_back.mlir  num2bits_drain_array_typed_out.mlir  (+41 more)
tests/audit/: BUILD.bazel  audit_smoke_test.sh  synthetic_clean.mlir  synthetic_orphan_zero.mlir
tools/: BUILD.bazel  llzk-to-shlo-opt.cpp  witness_layout_audit.cc
(+80 files in other folders)
