# Copyright 2026 The llzk-to-shlo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

workspace(name = "llzk_to_shlo")

load("//third_party/stablehlo:workspace.bzl", stablehlo = "repo")

stablehlo()

load("@stablehlo//third_party/zk_dtypes:workspace.bzl", zk_dtypes = "repo")

zk_dtypes()

# Initialize hermetic Python
load("@zk_dtypes//third_party/py:python_init_rules.bzl", "python_init_rules")

python_init_rules()

load("@zk_dtypes//third_party/py:python_init_repositories.bzl", "python_init_repositories")

python_init_repositories(
    requirements = {
        "3.11": "@stablehlo//:requirements_lock_3_11.txt",
    },
)

load("@zk_dtypes//third_party/py:python_init_toolchains.bzl", "python_init_toolchains")

python_init_toolchains()

load("@zk_dtypes//third_party/py:python_init_pip.bzl", "python_init_pip")

python_init_pip()

load("@pypi//:requirements.bzl", "install_deps")

install_deps()

load("@zk_dtypes//bazel:zk_dtypes_deps.bzl", "zk_dtypes_deps")

zk_dtypes_deps()

load("@rules_java//java:rules_java_deps.bzl", "rules_java_dependencies")

rules_java_dependencies()

load("@rules_java//java:repositories.bzl", "rules_java_toolchains")

rules_java_toolchains()

load("@stablehlo//third_party/prime_ir:workspace.bzl", prime_ir = "repo")

prime_ir()

load("@prime_ir//bazel:prime_ir_deps.bzl", "prime_ir_deps")

prime_ir_deps()

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load(
    "@prime_ir//third_party/llvm-project:workspace.bzl",
    "LLVM_COMMIT",
    "LLVM_SHA256",
    PRIME_IR_LLVM_PATCHES = "LLVM_PATCHES",
)
load(
    "@stablehlo//third_party/llvm-project:workspace.bzl",
    STABLEHLO_LLVM_PATCHES = "LLVM_PATCHES",
)

http_archive(
    name = "llvm-raw",
    build_file_content = "# empty",
    patch_args = ["-p1"],
    patches = PRIME_IR_LLVM_PATCHES + STABLEHLO_LLVM_PATCHES,
    sha256 = LLVM_SHA256,
    strip_prefix = "llvm-project-" + LLVM_COMMIT,
    urls = ["https://github.com/llvm/llvm-project/archive/{commit}.tar.gz".format(commit = LLVM_COMMIT)],
)

http_archive(
    name = "llvm_zstd",
    build_file = "@llvm-raw//utils/bazel/third_party_build:zstd.BUILD",
    sha256 = "7c42d56fac126929a6a85dbc73ff1db2411d04f104fae9bdea51305663a83fd0",
    strip_prefix = "zstd-1.5.2",
    urls = [
        "https://github.com/facebook/zstd/releases/download/v1.5.2/zstd-1.5.2.tar.gz",
    ],
)

http_archive(
    name = "llvm_zlib",
    build_file = "@llvm-raw//utils/bazel/third_party_build:zlib-ng.BUILD",
    sha256 = "e36bb346c00472a1f9ff2a0a4643e590a254be6379da7cddd9daeb9a7f296731",
    strip_prefix = "zlib-ng-2.0.7",
    urls = [
        "https://github.com/zlib-ng/zlib-ng/archive/refs/tags/2.0.7.zip",
    ],
)

load("@llvm-raw//utils/bazel:configure.bzl", "llvm_configure")

llvm_configure(name = "llvm-project")

# Hedron's Compile Commands Extractor for Bazel
http_archive(
    name = "hedron_compile_commands",
    patch_args = ["-p1"],
    patches = ["@zk_dtypes//third_party/bazel-compile-commands-extractor:allow_header_as_a_source_file.patch"],
    strip_prefix = "bazel-compile-commands-extractor-ed994039a951b736091776d677f324b3903ef939",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/ed994039a951b736091776d677f324b3903ef939.tar.gz",
)

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")

hedron_compile_commands_setup()

# LLZK dialect library (requires LLZK_INSTALL_DIR environment variable)
load("//third_party/llzk:workspace.bzl", llzk = "repo")

llzk()

# Circom compiler (built from source using cargo)
load("//third_party/circom:workspace.bzl", "circom_deps")

circom_deps()

# Circom benchmarks for E2E testing
http_archive(
    name = "circom_benchmarks",
    build_file = "//third_party/circom_benchmarks:circom_benchmarks.BUILD",
    integrity = "sha256-g9ys3uwsKqPNAyQ+kPnGLZczqvDvJ4PhvtNs5GsML18=",
    strip_prefix = "circom-benchmarks-a90dfdaa5af87a8aca5ae9ed3ed8571e4a129b86",
    urls = ["https://github.com/project-llzk/circom-benchmarks/archive/a90dfdaa5af87a8aca5ae9ed3ed8571e4a129b86.tar.gz"],
)
