# Copyright 2026 The llzk-to-shlo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

workspace(name = "llzk_to_shlo")

load("//third_party/stablehlo:workspace.bzl", stablehlo = "repo")

stablehlo()

load("@stablehlo//bazel:stablehlo_deps.bzl", "stablehlo_deps")

stablehlo_deps()

load("@stablehlo//bazel:stablehlo_deps2.bzl", "stablehlo_deps2")

stablehlo_deps2()

# Initialize hermetic Python
load("@zk_dtypes//third_party/py:python_init_rules.bzl", "python_init_rules")

python_init_rules()

load("@zk_dtypes//third_party/py:python_init_repositories.bzl", "python_init_repositories")

python_init_repositories(
    requirements = {
        "3.11": "@stablehlo//:requirements_lock_3_11.txt",
    },
)

load("@zk_dtypes//third_party/py:python_init_toolchains.bzl", "python_init_toolchains")

python_init_toolchains()

load("@zk_dtypes//third_party/py:python_init_pip.bzl", "python_init_pip")

python_init_pip()

load("@pypi//:requirements.bzl", "install_deps")

install_deps()

load("@stablehlo//bazel:stablehlo_deps3.bzl", "stablehlo_deps3")

stablehlo_deps3()

load("@rules_java//java:rules_java_deps.bzl", "rules_java_dependencies")

rules_java_dependencies()

load("@rules_java//java:repositories.bzl", "rules_java_toolchains")

rules_java_toolchains()

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")

hedron_compile_commands_setup()

# LLZK dialect library (requires LLZK_INSTALL_DIR environment variable)
load("//third_party/llzk:workspace.bzl", llzk = "repo")

llzk()

# Circom compiler (built from source using cargo)
load("//third_party/circom:workspace.bzl", "circom_deps")

circom_deps()

# StableHLO runner from open-zkx (for GPU witness generation)
load("//third_party/open_zkx:workspace.bzl", "stablehlo_runner_deps")

stablehlo_runner_deps()

# Circom benchmarks for E2E testing
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "circom_benchmarks",
    build_file = "//third_party/circom_benchmarks:circom_benchmarks.BUILD",
    integrity = "sha256-iLponmXQhe2lbFTap7n+Jr583rlreBnl3zNYFVK4AGM=",
    strip_prefix = "circom-benchmarks-6897550c0be30e8ab86fbcccde6b63a9666c0ceb",
    urls = ["https://github.com/project-llzk/circom-benchmarks/archive/6897550c0be30e8ab86fbcccde6b63a9666c0ceb.tar.gz"],
)
