# Copyright 2026 The llzk-to-shlo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

workspace(name = "llzk_to_shlo")

load("//third_party/open_zkx:workspace.bzl", open_zkx = "repo")

open_zkx()

# open-zkx's WORKSPACE is not evaluated by bazel. Manually replicate its
# transitive dependency chain: stablehlo → prime_ir → zk_dtypes.
load("@open_zkx//third_party/stablehlo:workspace.bzl", stablehlo = "repo")

stablehlo()

load("@stablehlo//third_party/prime_ir:workspace.bzl", prime_ir = "repo")

prime_ir()

load("@prime_ir//third_party/zk_dtypes:workspace.bzl", zk_dtypes = "repo")

zk_dtypes()

# Initialize hermetic Python
load("@zk_dtypes//third_party/py:python_init_rules.bzl", "python_init_rules")

python_init_rules()

load("@zk_dtypes//third_party/py:python_init_repositories.bzl", "python_init_repositories")

python_init_repositories(
    requirements = {
        "3.11": "@open_zkx//:requirements_lock_3_11.txt",
    },
)

load("@zk_dtypes//third_party/py:python_init_toolchains.bzl", "python_init_toolchains")

python_init_toolchains()

load("@zk_dtypes//third_party/py:python_init_pip.bzl", "python_init_pip")

python_init_pip()

load("@pypi//:requirements.bzl", "install_deps")

install_deps()

load("@open_zkx//bazel:zkx_deps.bzl", "zkx_deps")

zkx_deps()

load("@open_zkx//bazel:zkx_deps2.bzl", "zkx_deps2")

zkx_deps2()

load("@open_zkx//bazel:zkx_deps3.bzl", "zkx_deps3")

zkx_deps3()

load("@rules_java//java:rules_java_deps.bzl", "rules_java_dependencies")

rules_java_dependencies()

load("@rules_java//java:repositories.bzl", "rules_java_toolchains")

rules_java_toolchains()

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Hedron's Compile Commands Extractor for Bazel
http_archive(
    name = "hedron_compile_commands",
    patch_args = ["-p1"],
    patches = ["@zk_dtypes//third_party/bazel-compile-commands-extractor:allow_header_as_a_source_file.patch"],
    strip_prefix = "bazel-compile-commands-extractor-ed994039a951b736091776d677f324b3903ef939",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/ed994039a951b736091776d677f324b3903ef939.tar.gz",
)

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")

hedron_compile_commands_setup()

# LLZK dialect library
load("//third_party/llzk:workspace.bzl", llzk = "repo")

llzk()

# Circom compiler (built from source using cargo)
load("//third_party/circom:workspace.bzl", "circom_deps")

circom_deps()

# Circom benchmarks for E2E testing
http_archive(
    name = "circom_benchmarks",
    build_file = "//third_party/circom_benchmarks:circom_benchmarks.BUILD",
    integrity = "sha256-iLponmXQhe2lbFTap7n+Jr583rlreBnl3zNYFVK4AGM=",
    strip_prefix = "circom-benchmarks-6897550c0be30e8ab86fbcccde6b63a9666c0ceb",
    urls = ["https://github.com/project-llzk/circom-benchmarks/archive/6897550c0be30e8ab86fbcccde6b63a9666c0ceb.tar.gz"],
)
