# Copyright 2026 The llzk-to-shlo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load(":e2e.bzl", "circom_to_stablehlo")

package(default_visibility = ["//visibility:public"])

# Simple example for testing
circom_to_stablehlo(
    name = "simple",
    srcs = ["simple/main.circom"],
)

# E2E examples using circom-benchmarks

# TODO(chokobole): Remove this tag after LLZK fixes this error.
# thread 'main' panicked at /home/ryan/Workspace/circom/llzk_backend/src/function.rs:1926:37:
# not yet implemented: Handle component access
# note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
UNIMPLEMTED_TAGS = ["manual"]

circom_to_stablehlo(
    name = "num2bits",
    srcs = ["@circom_benchmarks//:num2bits_srcs"],
    tags = UNIMPLEMTED_TAGS,
)

circom_to_stablehlo(
    name = "fulladder",
    srcs = ["@circom_benchmarks//:fulladder_srcs"],
    tags = UNIMPLEMTED_TAGS,
)

circom_to_stablehlo(
    name = "decoder",
    srcs = ["@circom_benchmarks//:decoder_srcs"],
    tags = UNIMPLEMTED_TAGS,
)

circom_to_stablehlo(
    name = "binsum",
    srcs = ["@circom_benchmarks//:binsum_srcs"],
    tags = UNIMPLEMTED_TAGS,
)
