# Copyright 2026 The llzk-to-shlo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load(":e2e.bzl", "circom_to_stablehlo")

package(default_visibility = ["//visibility:public"])

# Simple example for testing
circom_to_stablehlo(
    name = "simple",
    srcs = ["simple/main.circom"],
)

# E2E examples using circom-benchmarks

circom_to_stablehlo(
    name = "num2bits",
    srcs = ["@circom_benchmarks//:num2bits_srcs"],
)

circom_to_stablehlo(
    name = "fulladder",
    srcs = ["@circom_benchmarks//:fulladder_srcs"],
)

circom_to_stablehlo(
    name = "decoder",
    srcs = ["@circom_benchmarks//:decoder_srcs"],
)

circom_to_stablehlo(
    name = "binsum",
    srcs = ["@circom_benchmarks//:binsum_srcs"],
)
